[25.01.2019] added uk and ru languages to settings, removed extra de language. updated navbar. Deleted existing footer.

--- a/bombay/myshop/templates/myshop/pages/base.html
+++ b/bombay/myshop/templates/myshop/pages/base.html
@@ -18,7 +18,7 @@
 {% addtoblock "js" %}<script src="{% static 'node_modules/angular-i18n/' %}{% djng_locale_script 'de' %}"></script>{% endaddtoblock %}
 {% addtoblock "js" %}<script src="{% static 'node_modules/angular-animate/angular-animate.min.js' %}"></script>{% endaddtoblock %}
 
-<body>
+<body style="background-color:#d9d9d9;">
 	{% cms_toolbar %}
 	<header>
 	{% block header %}{% endblock %}
