[29.01.2019] Fixed navbar, started creating static pages.

--- a/bombay/myshop/static/myshop/css/_variables.scss
+++ b/bombay/myshop/static/myshop/css/_variables.scss
@@ -1,9 +1,9 @@
 @import "shop/css/variables";
 
 // footer
-$body-footer-height: 400px;
+$body-footer-height: 250px;
 $body-footer-color: $navbar-inverse-color;
-$body-footer-bg: $navbar-inverse-bg;
+$body-footer-bg: #f2f2f2;
 $body-footer-border: $navbar-inverse-border;
 
 $body-footer-link-color: $navbar-inverse-link-color;
