--- a/bombay/myshop/templates/myshop/pages/base.html
+++ b/bombay/myshop/templates/myshop/pages/base.html
@@ -38,12 +38,14 @@
 		</div>
 	{% endblock main-content %}
 	</main>
-
 	<footer class="footer">
 	{% block footer %}{% endblock footer %}
 	</footer>
 
 	{% render_block "js" postprocessor "shop.sekizai_processors.compress" %}
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js" type="text/javascript"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.min.js" type="text/javascript"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.0.2/TweenMax.min.js"></script>
 	<script type="text/javascript">
 	angular.module('myShop', ['ngAnimate', 'ngSanitize', {% with_data "ng-requires" as ng_requires %}
 		{% for module in ng_requires %}'{{ module }}'{% if not forloop.last %}, {% endif %}{% endfor %}{% end_with_data %}
