--- a/bombay/myshop/templates/myshop/pages/navbar.html
+++ b/bombay/myshop/templates/myshop/pages/navbar.html
@@ -9,8 +9,8 @@
 			<div class="row">
 				<div class="col-xs-12 col-sm-3">
 					<a href="/">
-						<img class="brand-logo" src="{% static 'shop/bombay-shop-logo.png' %}" alt="django-SHOP"
-							 height="100"/>
+						<img class="brand-logo" src="{% static 'shop/bombay-shop-logo.png' %}" alt="Bombay-SHOP"
+							 height="80"/>
 					</a>
 				</div>
 				<div class="col-xs-12 col-sm-9">
