[10.02.2019] Fixed css files for correct docker building

--- a/shop/templates/shop/breadcrumb/catalog.html
+++ b/shop/templates/shop/breadcrumb/catalog.html
@@ -1,6 +1,9 @@
 {% load i18n static menu_tags sekizai_tags %}
 {% addtoblock "css" %}
 <style>
+.breadcrumb {
+margin-top: 40px;
+}
 .breadcrumb li.pull-right::before {
 	display: none;
 }
