--- a/shop/templates/shop/catalog/product-add2cart.html
+++ b/shop/templates/shop/catalog/product-add2cart.html
@@ -45,11 +45,13 @@
 			{% endspaceless %}{% endif %}
 			<tr>
 				<td></td>
+				{% comment %}
 				<td class="vertical-align-middle">
 				{% if shop_watch_list_url %}
 					<button class="btn btn-info btn-block btn-xs" ng-click="addToCart('{% url 'shop:watch-list' %}', {watch: true})">{% trans "Watch product" %}</button>
 				{% endif %}
 				</td>
+				{% endcomment %}
 				<td>
 					<button class="btn btn-primary btn-block" ng-click="addToCart('{% url 'shop:cart-list' %}')">{% trans "Add to cart" %}</button>
 				</td>
