--- a/bombay/myshop/templates/myshop/pages/footer.html
+++ b/bombay/myshop/templates/myshop/pages/footer.html
@@ -7,14 +7,14 @@
 <div class="container container-fluid">
 	<div class="col-sm-6 col-md-4 col-lg-4">
 		<div id="contact-info">
-			<h3 class="text-center">Контакти</h3>
+			<h3 class="text-center">{% trans "Контакти" %}</h3>
 
 			<ul style="list-style-type: none;">
 				<li>
 					<h4><i class="glyphicon glyphicon-map-marker"></i> БОМБЕЙ - магазин <br>
-						&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;колоритного одягу і аксесуарів<br>
-						&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;м.Львів, <br>
-						&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;вул. Дудаєва, 3<br>
+						&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;{% trans "колоритного одягу і аксесуарів" %}<br>
+						&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;{% trans "м.Львів," %} <br>
+						&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;{% trans "вул. Дудаєва," %}<br>
 					</h4>
 				</li>
 				<li>
@@ -32,7 +32,7 @@
 		<!-- Button trigger modal -->
 		<div class="row">
 			 <div class="centered text-center">
-				<button class="btn-contactus" href="#signup" data-toggle="modal" data-target=".log-sign">
+				<button class="btn-contactus" data-toggle="modal" data-target=".log-sign">
 					<h3>{% trans "Contact us" %}&nbsp;<i class="glyphicon glyphicon-pencil"></i></h3>
 				</button>
 			 </div>
@@ -41,57 +41,7 @@
 		<div class="modal fade bs-modal-sm log-sign" id="myModal" tabindex="-1" role="dialog"
 			 aria-labelledby="mySmallModalLabel" aria-hidden="true">
 			<div class="modal-dialog modal-sm">
-				<div class="modal-content">
-
-					<div class="well well-sm">
-						<form>
-							<div class="row">
-								<div class="col-md-12">
-									<div class="text-center"><h2>{% trans "Your opinion is important for us." %}</h2></div>
-									<div class="form-group">
-										<label for="name">
-											{% trans "Name" %}</label>
-										<input type="text" class="form-control" id="name"
-											   placeholder="{% trans 'Enter name' %}" required="required"/>
-									</div>
-									<div class="form-group">
-										<label for="email">
-											{% trans "Email Address" %}</label>
-										<div class="input-group">
-                                <span class="input-group-addon"><span class="glyphicon glyphicon-envelope"></span>
-                                </span>
-											<input type="email" class="form-control" id="email"
-												   placeholder="{% trans 'Enter your email' %}" required="required"/></div>
-									</div>
-									<div class="form-group">
-										<label for="subject">
-											{% trans "Subject" %}</label>
-										<select id="subject" name="subject" class="form-control" required="required">
-											<option value="na" selected="">{% trans "Choose One:" %}</option>
-											<option value="service">{% trans "General Customer Service" %}</option>
-											<option value="suggestions">{% trans "Suggestions" %}</option>
-											<option value="product">{% trans "Product Support" %}</option>
-										</select>
-									</div>
-									<div class="form-group">
-										<label for="name">{% trans "Message" %}</label>
-										<textarea name="message" id="message" class="form-control" rows="9" cols="25"
-												  required="required"
-												  placeholder="Message"></textarea>
-									</div>
-								</div>
-								<div class="col-md-12">
-									<button type="button" class="btn btn-default" data-dismiss="modal">{% trans "Close" %}
-									</button>
-									<button type="submit" class="btn btn-primary pull-right" id="btnContactUs">
-										{% trans "Send Message" %}
-									</button>
-								</div>
-							</div>
-						</form>
-					</div>
-
-				</div>
+				<div class="modal-content" id="contactus-place"></div>
 			</div>
 
 		</div>
