--- a/contact_us/templates/contactus/contact_success.html
+++ b/contact_us/templates/contactus/contact_success.html
@@ -2,5 +2,18 @@
 
 
 <div class="well well-sm">
-	<h3>Thank you for your opinion. If it is neccessary, we contact you soon.</h3>
+	<div class="row">
+		<div class="text-center" style="background: #fbfbfb; margin: auto; border-radius: 5px; margin: 5%;">
+			<h3>{% trans "Thank you for your opinion. If it is neccessary, we contact you soon." %}</h3>
+		</div>
+	</div>
+	<div class="row">
+		<div class="col-md-12 text-center">
+			<button type="button" class="btn btn-default" id="btnCloseModal" data-dismiss="modal">
+				{% trans "Close" %}
+			</button>
+		</div>
+	</div>
 </div>
+
+
