--- a/bombay/myshop/templates/myshop/catalog/clothes-detail.html
+++ b/bombay/myshop/templates/myshop/catalog/clothes-detail.html
@@ -1,14 +1,38 @@
 {% extends "myshop/catalog/product-detail.html" %}
-{% load i18n cms_tags thumbnail %}
+{% load i18n static cms_tags sekizai_tags thumbnail %}
+
+{% block head %}
+{{ block.super }}
+{% addtoblock "js" %}
+<script src="{% static 'myshop/js/easyzoom.js' %}" type="text/javascript"></script>
+{% endaddtoblock %}
+{% endblock head %}
 
 {% block main-content %}
 <div class="container">
 	<div class="row product-detail">
-		<div class="col-xs-12 col-md-8">
-			<h1>{% render_model product "product_name" %}</h1>
-			<div class="images">
-				<div id="img-container" style="max-height: 300;">
-					<img class="img-responsive" src="{{ product.sample_image.url }}" alt="{{ product.sample_image }}">
+		<div class="col-xs-12 col-md-12">
+			<div class="col-xs-10 col-md-10">
+				<h1>{% render_model product "product_name" %}</h1>
+			</div>
+			<div class="col-xs-2 col-md-2 pull-right">
+				<span class="label label-primary" style="color: #e6ffff">{{ product.availability }}</span>
+			</div>
+			<div class="images col-xs-12 col-md-12 text-center">
+				<div class="easyzoom easyzoom--overlay easyzoom--with-thumbnails is-ready">
+					<a href="{{ product.images.all.1.url }}">
+						<img src="{{ product.images.all.0.url }}" style="max-height: 30em;" alt="{{ product.product_name }}" >
+					</a>
+				</div>
+				<div class="thumbnails">
+					{% for img in product.images.all %}
+
+						{% thumbnail img 250x250 as thumb %}
+						<a href="{{ img.url }}" data-standard="{{ img.url }}">
+							<img src="{{ thumb.url }}" width="{{ thumb.width }}" height="{{ thumb.height }}" alt="{{ product.product_name }}">
+						</a>
+
+					{% endfor %}
 				</div>
 			</div>
 		</div>
@@ -75,4 +99,5 @@
 		</div>
 	</div>
 </div>
+
 {% endblock main-content %}
