--- a/bombay/myshop/templates/myshop/catalog/clothes-detail.html
+++ b/bombay/myshop/templates/myshop/catalog/clothes-detail.html
@@ -19,7 +19,7 @@
 				<div class="promoBox">
 					<aside><h3>{{ product.discount }}</h3></aside>
 					<h4 style="color: #4f85bb">{{ product.availability }}</h4>
-					<h3>{{ product.unit_price }}</h3>
+					<h3 style="color: red;">{{ product.unit_price }}</h3>
 					<p><del>{{ product.price_without_discount }}</del></p>
 				</div>
 			</div>
