--- a/bombay/myshop/templates/myshop/cart/editable.html
+++ b/bombay/myshop/templates/myshop/cart/editable.html
@@ -1,6 +1,20 @@
 {% extends "shop/cart/editable.html" %}
 {% load i18n %}
 
+{% block shop-cart-thead %}
+	<thead ng-if="cart.num_items>0">
+		<tr>
+			<th class="col-xs-2 col-md-1 text-center">{% trans "Quantity" %}</th>
+			<th class="col-xs-6 text-center">{% trans "Product" %}</th>
+			<th class="col-xs-1 text-center">{% trans "Size" %}</th>
+			<th class="col-xs-1 text-right">{% trans "Unit Price" %}</th>
+			<th class="col-xs-1 col-md-2 text-right">{% trans "Total" %}</th>
+			<th class="col-xs-1"></th>
+		</tr>
+	</thead>
+<caption ng-if="cart.num_items==0"><h3>{% trans "There are no items in the cart" %}</h3></caption>
+{% endblock shop-cart-thead %}
+
 {% block shop-cart-item %}
 	<td>
 		<div class="form-group">
@@ -11,6 +25,9 @@
 	</td>
 	<td>
 		<div class="media" ng-bind-html="cart_item.summary.media"><!-- rendered by products/cart-`product`-media.html --></div>
+	</td>
+	<td class="text-center text-nowrap">
+		<p ng-if="cart_item.extra.product_size" ng-bind="cart_item.extra.product_size"></p>
 	</td>
 	<td class="text-right text-nowrap">
 		<p ng-bind="cart_item.unit_price"></p>
@@ -24,10 +41,12 @@
 		<button type="button" class="btn btn-xs btn-danger btn-block" ng-click="deleteCartItem(cart_item)">
 			<span class="glyphicon glyphicon-remove-circle"></span>&nbsp;{% trans "Remove" %}
 		</button>
+	{% comment %}
 	{% if shop_watch_list_url %}
 		<button type="button" class="btn btn-xs btn-info btn-block" ng-click="watchCartItem(cart_item)">
 			<span class="glyphicon glyphicon-ok-circle"></span>&nbsp;{% trans "Watch Item" %}
 		</button>
 	{% endif %}
+	{% endcomment %}
 	</td>
 {% endblock shop-cart-item %}
