--- a/bombay/myshop/templates/myshop/pages/base.html
+++ b/bombay/myshop/templates/myshop/pages/base.html
@@ -2,12 +2,13 @@
 <!DOCTYPE html>
 <html lang="{{ LANGUAGE_CODE }}" ng-app="myShop">
 <head>
-	<title>{% block title %}django SHOP demo{% endblock %}</title>
+	<title>{% block title %}Bombay Shop{% endblock %}</title>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="robots" content="{{ ROBOTS_META_TAGS }}" />
 	<meta name="description" content="{% block meta-description %}{% endblock %}" />
+	<link rel="shortcut icon" type="image/png" href="/static/shop/bombay-shop-logo.png">
 	{% block head %}{% endblock head %}
 	{% render_block "css" postprocessor "shop.sekizai_processors.compress" %}
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js" type="text/javascript"></script>
@@ -39,7 +40,7 @@
 		</div>
 	{% endblock main-content %}
 	</main>
-	<footer class="footer">
+	<footer class="footer" style="margin-top: 3%;">
 	{% block footer %}{% endblock footer %}
 	</footer>
 
