--- a/shop/static/shop/css/navbar.scss
+++ b/shop/static/shop/css/navbar.scss
@@ -1,12 +1,30 @@
 .navbar {
-	background-color: #d9d9d9;
+  background-color: #d9d9d9;
 }
 
-.navbar-nav {
-	.shop-dropdown-forms {
-		padding: 10px 15px;
-		.btn {
-			margin-bottom: 10px;
-		}
-	}
+.navbar-nav .shop-dropdown-forms {
+  padding: 10px 15px;
+  .btn {
+    margin-bottom: 10px;
+  }
+}
+
+.navbar-blue {
+  .navbar-nav {
+    li a {
+      background-color: #016d8b;
+      color: #ffff;
+      &:hover {
+        background-color: #004b5f;
+        color: #ffff;
+      }
+    }
+    .active a {
+      background-color: #004b5f;
+      color: #ffff;
+    }
+  }
+  .dropdown-menu {
+    background-color: #016d8b;
+  }
 }
