--- a/shop/static/shop/css/product-list.scss
+++ b/shop/static/shop/css/product-list.scss
@@ -1,10 +1,140 @@
 .shop-list-item {
-	padding-left: 5px;
-	padding-right: 5px;
-	height: 350px;
-	@import "product-figure";
+  padding-left: 5px;
+  padding-right: 5px;
+  height: 350px;
+  figure {
+    border: 1px solid #ddd;
+    border-radius: 4px;
+    padding: 10px;
+    min-height: 340px;
+    a {
+      &:hover, &:active {
+        text-decoration: none;
+      }
+    }
+    h4 {
+      min-height: 38px;
+    }
+    figcaption {
+      margin-top: 5px;
+      min-height: 50px;
+    }
+  }
 }
 
 .pagination {
-	margin-top: 15px !important;
+  margin-top: 15px !important;
+}
+
+.box {
+  border-radius: 5px;
+  overflow: hidden;
+  position: relative;
+  z-index: 1;
+  transition: all 0.3s ease 0s;
+  &:after {
+    content: '';
+    background: linear-gradient(to right, #337ab7, #016d8b);
+    height: 20px;
+    border-radius: 5px 5px 0 0;
+    position: absolute;
+    bottom: -20px;
+    right: 30px;
+    left: 30px;
+    z-index: 1;
+    transition: all 0.3s ease 0s;
+  }
+  &:hover:after {
+    bottom: 0;
+  }
+  img {
+    width: 100%;
+    height: auto;
+    transition: all 0.3s ease 0s;
+  }
+  &:hover img {
+    opacity: 0.7;
+    filter: grayscale(50%) hue-rotate(180deg);
+    transform: scale(1.2);
+  }
+  .box-content {
+    background-color: #fff;
+    border-radius: 5px;
+    overflow: hidden;
+    position: absolute;
+    left: 30px;
+    right: 30px;
+    bottom: 100%;
+    z-index: 2;
+    transition: all 0.3s ease 0s;
+  }
+  &:hover .box-content {
+    bottom: 66px;
+  }
+  .title {
+    color: #fff;
+    background: linear-gradient(to right, #337ab7, #016d8b);
+    padding: 10px;
+    margin: 0;
+  }
+  .post {
+    color: #016d8b;
+    font-size: 18px;
+    font-weight: 400;
+    text-transform: capitalize;
+    margin: 0 10px 5px;
+    display: block;
+  }
+  .icon {
+    padding: 0;
+    margin: 0;
+    list-style: none;
+    position: absolute;
+    bottom: 25px;
+    right: 40px;
+    li {
+      margin-right: 10px;
+      display: inline-block;
+      transform: translateY(100px);
+      transition: all 0.3s ease 0.15s;
+      &:last-child {
+        margin-right: 0;
+        transition: all 0.3s ease 0.3s;
+      }
+    }
+  }
+  &:hover .icon li {
+    transform: translateY(0);
+  }
+  .icon li a {
+    color: #016d8b;
+    background-color: #fff;
+    font-size: 18px;
+    text-align: center;
+    line-height: 30px;
+    height: 35px;
+    width: 35px;
+    border: 2px solid #016d8b;
+    border-radius: 50%;
+    display: block;
+    transition: all 0.3s ease 0s;
+    &:hover {
+      color: #fff;
+      background-color: #016d8b;
+      border-color: #fff;
+      box-shadow: 0 0 5px #000;
+    }
+  }
+}
+
+@media only screen and (max-width: 990px) {
+  .box {
+    margin-bottom: 30px;
+  }
+}
+
+@media only screen and (max-width: 479px) {
+  .box .title {
+    font-size: 20px;
+  }
 }
