--- a/bombay/myshop/static/myshop/css/default.css
+++ b/bombay/myshop/static/myshop/css/default.css
@@ -3656,7 +3656,7 @@ tbody.collapse.in {
   position: relative;
   min-height: 50px;
   margin-bottom: 20px;
-  border: 1px solid transparent; }
+  }
   .navbar:before, .navbar:after {
     content: " ";
     display: table; }
