--- a/bombay/myshop/static/myshop/css/navbar.css
+++ b/bombay/myshop/static/myshop/css/navbar.css
@@ -1,12 +1,5 @@
 .navbar .navbar-extra-top {
-  min-height: 50px;
-  border-top: 1px solid transparent;
-  border-bottom: 1px solid #e7e7e7;
-  box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.15), 0 1px 5px rgba(0, 0, 0, 0.075); }
-  .navbar .navbar-extra-top .shop-brand {
-    text-align: center; }
-  .navbar .navbar-extra-top .brand-logo {
-    margin-top: 7px; }
+  height: 90px;
 
 @media (max-width: 768px) {
   .navbar .expanded-nav {
@@ -39,11 +32,6 @@
   padding: 5px 10px;
   line-height: 20px; }
 
-@media (max-width: 768px) {
-  body {
-    padding-top: 290px; } }
 
-@media (min-width: 768px) {
-  body {
-    padding-top: 103px; } }
+
 
