--- a/bombay/myshop/templates/myshop/catalog/smartcard-detail.html
+++ b/bombay/myshop/templates/myshop/catalog/smartcard-detail.html
@@ -8,7 +8,7 @@
 			<h1>{% render_model product "product_name" %}</h1>
 			<pre class="images">
 			{% for img in product.images.all %}
-				{% thumbnail img 250x250 crop as thumb %}
+				{% thumbnail img 250x250 upscale as thumb %}
 				<img src="{{ thumb.url }}" width="{{ thumb.width }}" height="{{ thumb.height }}" alt="{{ product.product_name }}">
 			{% endfor %}
 			</pre>
