--- a/shop/templates/shop/catalog/product-figure.html
+++ b/shop/templates/shop/catalog/product-figure.html
@@ -3,12 +3,19 @@
 {% angularjs ng %}
 <figure>
 	<a href="{{ product.product_url }}">
-		<h4>{{ product.product_name }}</h4>
 		<div{% if ng %} ng-bind-html="product.media"{% endif %}>{{ product.media }}</div>
+		<h4 class="text-center">{{ product.product_name }}</h4>
 	</a>
 	<figcaption>
+		<div>
 		<strong>{% trans "Price" %}: {{ product.price }}</strong>
-		{% if ng %}<ng-bind-html ng-bind-html="product.caption"></ng-bind-html>{% else %}{{ product.caption|safe }}{% endif %}
+		</div>
+		<div>
+			<h5> <strong>{% trans "Available sizes" %}: </strong>
+			{% if ng %}<ng-bind-html ng-bind-html="product.size_range"></ng-bind-html>{% else %}{{ product.size_range|safe }}{% endif %}
+			</h5>
+		</div>
 	</figcaption>
 </figure>
 {% endangularjs %}
+
