[3.03.2019]fixed product cart templates and opnions carousel

--- a/shop/templates/shop/catalog/opinions-list.html
+++ b/shop/templates/shop/catalog/opinions-list.html
@@ -24,7 +24,7 @@
       <img src="http://www.pptbackgrounds.org/uploads/dark-blue-background-backgrounds-wallpapers.jpg" style="height: 200px; width: 100%;" alt="opinion bg">
 		<div class="carousel-caption">
         <h3>{{ opinion.user_name }}</h3>
-        <p>{{ opinion.message }}/p>
+        <p>{{ opinion.message }}</p>
       </div>
 	</div>
 	{% endfor %}
