--- a/bombay/myshop/templates/myshop/catalog/commodity-detail.html
+++ b/bombay/myshop/templates/myshop/catalog/commodity-detail.html
@@ -1,28 +1,113 @@
-{% extends "myshop/pages/default.html" %}
-{% load cms_tags sekizai_tags sass_tags %}
-
-{% block title %}{{ product.product_name }}{% endblock %}
+{% extends "myshop/catalog/product-detail.html" %}
+{% load i18n static cms_tags sekizai_tags thumbnail %}
 
 {% block head %}
-	{{ block.super }}
-	{% addtoblock "css" %}<link href="{% sass_src 'myshop/css/product-detail.scss' %}" rel="stylesheet" type="text/css" />{% endaddtoblock %}
+{{ block.super }}
+{% addtoblock "js" %}
+<script src="{% static 'myshop/js/easyzoom.js' %}" type="text/javascript"></script>
+{% endaddtoblock %}
 {% endblock head %}
 
-{% block breadcrumb %}{% with extra_ance=product.product_name %}
-	{% if product.show_breadcrumb %}{% include "shop/breadcrumb/default.html" %}{% endif %}
-{% endwith %}{% endblock %}
-
 {% block main-content %}
-	{# the first `render_placeholder` is only required for editing the page #}
-	{% render_placeholder product.placeholder %}{% render_placeholder product.placeholder as product_details %}
-	{% if not product_details %}
 <div class="container">
-	<div class="row">
-		<div class="col-xs-12">
-			<h1>{% render_model product "product_name" %}</h1>
-			<p class="lead">Edit this page, then switch into <em>Structure</em> mode and add plugins to placeholder <code> {{ product.placeholder.slot }} </code>.</p>
+	<div class="row product-detail" style="margin: 7%;">
+		<div class="col-xs-12 col-md-12">
+			<div class="col-xs-8 col-md-8">
+				<h1>{% render_model product "product_name" %}</h1>
+			</div>
+			<div class="col-xs-4 col-md-4">
+				<div class="promoBox">
+					<aside><h3>{{ product.discount }}</h3></aside>
+					<h4 style="color: #4f85bb">{{ product.get_availability_display }}</h4>
+					<h3 style="color: red;">{{ product.unit_price }}</h3>
+					<p><del>{{ product.price_without_discount }}</del></p>
+				</div>
+			</div>
+			</div>
+			<div class="col-xs-2 col-md-2 thumbnails" style="margin-right: 2%; margin-bottom: 2%;">
+				{% for img in product.images.all %}
+				{% thumbnail img 150x150 as thumb %}
+				<a href="{{ img.url }}" data-standard="{{ img.url }}">
+					<img style="margin-right: 2%; margin-bottom: 2%;" src="{{ thumb.url }}" width="{{ thumb.width }}"
+						 height="{{ thumb.height }}" alt="{{ product.product_name }}">
+				</a>
+				{% endfor %}
+			</div>
+			<div class="images col-xs-8 col-md-8 text-center">
+				<div class="easyzoom easyzoom--overlay easyzoom--with-thumbnails is-ready">
+					<a href="{{ product.images.all.0.url }}">
+						<img src="{{ product.images.all.0.url }}" style="max-height: 35em;"
+							 alt="{{ product.product_name }}">
+					</a>
+				</div>
+			</div>
+		</div>
+		<div class="col-xs-12 col-md-8">
+			{{ product.description|safe }}
+			<table class="table table-bordered">
+				<tbody class="table-striped">
+					<tr>
+						<td>{% trans "Gender" %}</td>
+						<td>{{ product.get_gender_display }}</td>
+					</tr>
+					<tr>
+						<td>{% trans "Category" %}</td>
+						<td>{{ product.category }}</td>
+					</tr>
+					{% if product.country_of_origin %}
+					<tr>
+						<td>{% trans "Country of origin" %}</td>
+						<td>{{ product.country_of_origin }}</td>
+					</tr>
+					{% endif %}
+					{% if product.manufacturer %}
+					<tr>
+						<td>{% trans "Manufacturer" %}</td>
+						<td>{{ product.manufacturer }}</td>
+					</tr>
+					{% endif %}
+					{% if product.color %}
+					<tr>
+						<td>{% trans "Color" %}</td>
+						<td>{{ product.color }}</td>
+					</tr>
+					{% endif %}
+					{% if product.color %}
+					<tr>
+						<td>{% trans "Season" %}</td>
+						<td>{{ product.get_season_display }}</td>
+					</tr>
+					{% endif %}
+					{% if product.fabric %}
+					<tr>
+						<td>{% trans "Fabric" %}</td>
+						<td>{{ product.fabric }}</td>
+					</tr>
+					{% endif %}
+					{% if product.composition %}
+					<tr>
+						<td>{% trans "Composition" %}</td>
+						<td>{{ product.composition }}</td>
+					</tr>
+					{% endif %}
+					{% if product.decoration %}
+					<tr>
+						<td>{% trans "Decoration" %}</td>
+						<td>{{ product.decoration }}</td>
+					</tr>
+					{% endif %}
+					{% if product.condition %}
+					<tr>
+						<td>{% trans "Condition" %}</td>
+						<td>{{ product.get_condition_display }}</td>
+					</tr>
+					{% endif %}
+				</tbody>
+			</table>
+			<!-- include "Add to Cart" dialog box -->
+			{% include "myshop/catalog/clothes-add2cart.html" %}
 		</div>
 	</div>
 </div>
-	{% endif %}
+
 {% endblock main-content %}
