--- a/bombay/myshop/templates/myshop/pages/navbar.html
+++ b/bombay/myshop/templates/myshop/pages/navbar.html
@@ -54,13 +54,13 @@
 {% block navbar-nav %}
 
 <div class="row" style="margin-top: 3%">
-	<div class="col-xs-12 col-sm-2">
+	<div class="col-xs-12 col-sm-3 col-lg-2">
 		<a href="/">
 			<img class="brand-logo" src="{% static 'shop/bombay-shop-logo.png' %}" alt="Bombay-SHOP"
 				 height="62"/>
 		</a>
 	</div>
-	<div class="col-xs-12 col-sm-10 navbar-blue pull-right" style="padding-top: 1%;">
+	<div class="col-xs-12 col-sm-9 col-lg-10 navbar-blue pull-right" style="padding-top: 1%;">
 		{{ block.super }}
 	</div>
 </div>
