--- a/shop/static/shop/css/product-list.css
+++ b/shop/static/shop/css/product-list.css
@@ -1,7 +1,7 @@
 .shop-list-item {
   padding-left: 5px;
   padding-right: 5px;
-  height: 350px; }
+   }
   .shop-list-item figure {
     border: 1px solid #ddd;
     border-radius: 4px;
