--- a/shop/templates/shop/catalog/product-add2cart.html
+++ b/shop/templates/shop/catalog/product-add2cart.html
@@ -39,10 +39,10 @@
 		{% if request.session.is_empty %}{% spaceless %}
 			<tr>
 				<td colspan="3">
-			{% block cookie-disclaimer %}{% blocktrans %}
+			{% block cookie-disclaimer %}{# blocktrans %}
 				By adding a product to the cart you are giving consent to cookies being used.<br>
 				For technical reasons cookies can not be disabled here.
-			{% endblocktrans %}{% endblock %}
+			{% endblocktrans #}{% endblock %}
 				</td>
 			</tr>
 			{% endspaceless %}{% endif %}
