--- a/bombay/myshop/templates/myshop/catalog/commodity-detail.html
+++ b/bombay/myshop/templates/myshop/catalog/commodity-detail.html
@@ -10,30 +10,38 @@
 
 {% block main-content %}
 <div class="container">
-	<div class="row product-detail" style="margin: 7%;">
+	<div class="row product-detail" style="margin-bottom: 7%; margin-top: 7%; margin-right: 3%; margin-left: 3%">
 		<div class="col-xs-12 col-md-12">
 			<div class="col-xs-8 col-md-8">
 				<h1>{% render_model product "product_name" %}</h1>
 			</div>
 			<div class="col-xs-4 col-md-4">
+				{% ifequal product.discount '- 0 %' %}
+				<div class="promoBox">
+					<h4 style="color: #4f85bb">{{ product.get_availability_display }}</h4>
+					<h3 style="color: black;">{{ product.unit_price }}</h3>
+				</div>
+				{% else %}
 				<div class="promoBox">
 					<aside><h3>{{ product.discount }}</h3></aside>
 					<h4 style="color: #4f85bb">{{ product.get_availability_display }}</h4>
 					<h3 style="color: red;">{{ product.unit_price }}</h3>
 					<p><del>{{ product.price_without_discount }}</del></p>
 				</div>
+				{% endifequal %}
 			</div>
 			</div>
-			<div class="col-xs-2 col-md-2 thumbnails" style="margin-right: 2%; margin-bottom: 2%;">
+			<div class="row">
+			<div class="col-xs-6 col-md-2 thumbnails" style="margin-right: 2%; margin-bottom: 2%;">
 				{% for img in product.images.all %}
 				{% thumbnail img 150x150 as thumb %}
 				<a href="{{ img.url }}" data-standard="{{ img.url }}">
-					<img style="margin-right: 2%; margin-bottom: 2%;" src="{{ thumb.url }}" width="{{ thumb.width }}"
+					<img style="margin-right: 2%; margin-bottom: 3%;" src="{{ thumb.url }}" width="{{ thumb.width }}"
 						 height="{{ thumb.height }}" alt="{{ product.product_name }}">
 				</a>
 				{% endfor %}
 			</div>
-			<div class="images col-xs-8 col-md-8 text-center">
+			<div class="images col-xs-12 col-md-6">
 				<div class="easyzoom easyzoom--overlay easyzoom--with-thumbnails is-ready">
 					<a href="{{ product.images.all.0.url }}">
 						<img src="{{ product.images.all.0.url }}" style="max-height: 35em;"
@@ -41,15 +49,9 @@
 					</a>
 				</div>
 			</div>
-		</div>
-		<div class="col-xs-12 col-md-8">
-			{{ product.description|safe }}
-			<table class="table table-bordered">
-				<tbody class="table-striped">
-					<tr>
-						<td>{% trans "Gender" %}</td>
-						<td>{{ product.get_gender_display }}</td>
-					</tr>
+				<div class="col-xs-12 col-md-3">
+					<table class="table" >
+				<tbody style="border: none;">
 					<tr>
 						<td>{% trans "Category" %}</td>
 						<td>{{ product.category }}</td>
@@ -68,44 +70,45 @@
 					{% endif %}
 					{% if product.color %}
 					<tr>
-						<td>{% trans "Color" %}</td>
+						<td>{% trans "Color and shades of product" %}</td>
 						<td>{{ product.color }}</td>
 					</tr>
 					{% endif %}
-					{% if product.color %}
+					{% if product.hair_type %}
 					<tr>
-						<td>{% trans "Season" %}</td>
-						<td>{{ product.get_season_display }}</td>
+						<td>{% trans "Hair type" %}</td>
+						<td>{{ product.hair_type }}</td>
 					</tr>
 					{% endif %}
-					{% if product.fabric %}
+					{% if product.classification %}
 					<tr>
-						<td>{% trans "Fabric" %}</td>
-						<td>{{ product.fabric }}</td>
+						<td>{% trans "Classification" %}</td>
+						<td>{{ product.classification }}</td>
 					</tr>
 					{% endif %}
-					{% if product.composition %}
+					{% if product.package %}
 					<tr>
-						<td>{% trans "Composition" %}</td>
-						<td>{{ product.composition }}</td>
+						<td>{% trans "Package" %}</td>
+						<td>{{ product.package }}</td>
 					</tr>
 					{% endif %}
-					{% if product.decoration %}
+					{% if product.weight %}
 					<tr>
-						<td>{% trans "Decoration" %}</td>
-						<td>{{ product.decoration }}</td>
-					</tr>
-					{% endif %}
-					{% if product.condition %}
-					<tr>
-						<td>{% trans "Condition" %}</td>
-						<td>{{ product.get_condition_display }}</td>
+						<td>{% trans "Weight/Volume" %}</td>
+						<td>{{ product.weight }}</td>
 					</tr>
 					{% endif %}
 				</tbody>
 			</table>
+				</div>
+			</div>
+		</div>
+		<div class="col-xs-12 col-md-12 col-lg-12">
+			{{ product.description|safe }}
+		</div>
+		<div class="col-xs-12 col-md-8 col-lg-6" style="margin-top: 2em;">
 			<!-- include "Add to Cart" dialog box -->
-			{% include "myshop/catalog/clothes-add2cart.html" %}
+			{% include "myshop/catalog/commodity-add2cart.html" %}
 		</div>
 	</div>
 </div>
