[11.03.2019] Updated product-details page html, added social icons, little fixes on the main page, fixed issue with sizes in cart, added google analitycs

--- a/bombay/myshop/static/myshop/css/footer.css
+++ b/bombay/myshop/static/myshop/css/footer.css
@@ -172,9 +172,8 @@ z-inedx:4;}
   color: #ffff;
   width: 180px;
   padding: 4px 0;
-  position: absolute;
+  position: relative;
   border: none;
-  transform: translateX(-50%) translateY(60%);
 }
 .btn-contactus p {
   text-align: center;
