--- a/bombay/myshop/templates/myshop/pages/footer.html
+++ b/bombay/myshop/templates/myshop/pages/footer.html
@@ -28,12 +28,21 @@
 	</div>
 	<div class="col-sm-6 col-md-4 col-lg-4"> <!-- Contact us form -->
 		<!-- Button trigger modal -->
-		<div class="row">
-			 <div class="centered text-center">
-				<button class="btn-contactus" data-toggle="modal" data-target=".log-sign">
-					<h3>{% trans "Contact us" %}&nbsp;<i class="glyphicon glyphicon-pencil"></i></h3>
-				</button>
-			 </div>
+		<div class="row text-center">
+			<div>
+				<h3 class="">{% trans "We are on:" %}</h3>
+				<ul class="list-unstyled">
+				<li style="margin: 1em;">
+					<a target="_blank" title="Facebook" href="https://www.facebook.com/bombayshop.com.ua/"><img alt="follow us on facebook" src="/static/myshop/facebook_logo.jpg" border=0 height="48em" width="45%"></a>
+				</li>
+					<li style="margin: 1em;">
+					<a target="_blank" title="Instagram" href=""><img alt="follow us on facebook" src="/static/myshop/Instagram-Button.png" border=0 height="45em" width="45%"><br></a>
+				</li>
+					<li style="margin: 1em;">
+					<a target="_blank" title="Prom.ua" href="https://bombayshop.uaprom.net/"><img alt="Prom.ua" src="https://uaprom-static.c.prom.st/image/portal/UA/logo-hcb90bfe0bb980f90fedff1ca2fe785651.png" border=0></a>
+					</li>
+				</ul>
+			</div>
 		</div>
 
 		<div class="modal fade bs-modal-sm log-sign" id="myModal" tabindex="-1" role="dialog"
