--- a/bombay/myshop/templates/myshop/pages/navbar.html
+++ b/bombay/myshop/templates/myshop/pages/navbar.html
@@ -12,10 +12,13 @@
 					<div class="row">
 							<ul class="nav navbar-nav">
 							<li>
-								<a href="tel:+380939227227" style="padding-top: 5px;"><h4><i class="fa fa-phone"></i>&nbsp;<em>+380939227227&nbsp;&nbsp;&nbsp;{% trans "м.Львів,  вул. Дудаєва, 3" %}</em>
-								</h4>
-								</a>
+								<a href="tel:+380939227227" style="padding-top: 5px;"><h4><i class="fa fa-phone"></i>&nbsp;<em>+380939227227&nbsp;&nbsp;&nbsp;</em></h4></a>
 							</li>
+						</ul>
+ 						<ul class="nav navbar-nav">
+							<li>
+						<a href="mailto:india_na@ukr.net" style="padding-top: 5px;"><h4><i class="fa fa-envelope"></i>&nbsp;india_na@ukr.net</h4></a>
+						</li>
 						</ul>
 					<ul class="nav navbar-nav navbar-right">
 
