--- a/bombay/myshop/templates/myshop/catalog/clothes-detail.html
+++ b/bombay/myshop/templates/myshop/catalog/clothes-detail.html
@@ -10,7 +10,7 @@
 
 {% block main-content %}
 <div class="container">
-	<div class="row product-detail" style="margin: 7%;">
+	<div class="row product-detail">
 		<div class="col-xs-12 col-md-12">
 			<div class="col-xs-8 col-md-8">
 				<h1>{% render_model product "product_name" %}</h1>
@@ -24,93 +24,92 @@
 				</div>
 			</div>
 			</div>
-			<div class="col-xs-2 col-md-2 thumbnails" style="margin-right: 2%; margin-bottom: 2%;">
+		<div class="col-xs-2 col-md-1 thumbnails" >
 				{% for img in product.images.all %}
 				{% thumbnail img 150x150 as thumb %}
 				<a href="{{ img.url }}" data-standard="{{ img.url }}">
-					<img style="margin-right: 2%; margin-bottom: 2%;" src="{{ thumb.url }}" width="{{ thumb.width }}"
-						 height="{{ thumb.height }}" alt="{{ product.product_name }}">
+					<img style="margin-bottom: 10%;" src="{{ thumb.url }}" width="auto"
+						 height="{{ thumb.height }}" alt="{{ product.product_name }}" style="margin-bottom: 2%;">
 				</a>
 				{% endfor %}
 			</div>
-			<div class="images col-xs-12 col-md-6">
+		<div class="images col-xs-12 col-md-6 text-center">
 				<div class="easyzoom easyzoom--overlay easyzoom--with-thumbnails is-ready">
 					<a href="{{ product.images.all.0.url }}">
-						<img src="{{ product.images.all.0.url }}" style="max-height: 35em;"
+						<img src="{{ product.images.all.0.url }}" style="max-height: 46em; max-width: 36em;"
 							 alt="{{ product.product_name }}">
 					</a>
 				</div>
 			</div>
-		<div class="col-xs-12 col-md-3">
-			<table class="table">
+		<div class="col-md-5">
+			{% include "myshop/catalog/clothes-add2cart.html" %}
+
+			<table class="table" style="background-color: #fff;">
 				<tbody class="">
-					<tr>
-						<td>{% trans "Gender" %}</td>
-						<td>{{ product.get_gender_display }}</td>
-					</tr>
-					<tr>
-						<td>{% trans "Category" %}</td>
-						<td>{{ product.category }}</td>
-					</tr>
-					{% if product.country_of_origin %}
-					<tr>
-						<td>{% trans "Country of origin" %}</td>
-						<td>{{ product.country_of_origin }}</td>
-					</tr>
-					{% endif %}
-					{% if product.manufacturer %}
-					<tr>
-						<td>{% trans "Manufacturer" %}</td>
-						<td>{{ product.manufacturer }}</td>
-					</tr>
-					{% endif %}
-					{% if product.color %}
-					<tr>
-						<td>{% trans "Color" %}</td>
-						<td>{{ product.color }}</td>
-					</tr>
-					{% endif %}
-					{% if product.color %}
-					<tr>
-						<td>{% trans "Season" %}</td>
-						<td>{{ product.get_season_display }}</td>
-					</tr>
-					{% endif %}
-					{% if product.fabric %}
-					<tr>
-						<td>{% trans "Fabric" %}</td>
-						<td>{{ product.fabric }}</td>
-					</tr>
-					{% endif %}
-					{% if product.composition %}
-					<tr>
-						<td>{% trans "Composition" %}</td>
-						<td>{{ product.composition }}</td>
-					</tr>
-					{% endif %}
-					{% if product.decoration %}
-					<tr>
-						<td>{% trans "Decoration" %}</td>
-						<td>{{ product.decoration }}</td>
-					</tr>
-					{% endif %}
-					{% if product.condition %}
-					<tr>
-						<td>{% trans "Condition" %}</td>
-						<td>{{ product.get_condition_display }}</td>
-					</tr>
-					{% endif %}
+				<tr>
+					<td>{% trans "Gender" %}</td>
+					<td>{{ product.get_gender_display }}</td>
+				</tr>
+				<tr>
+					<td>{% trans "Category" %}</td>
+					<td>{{ product.category }}</td>
+				</tr>
+				{% if product.country_of_origin %}
+				<tr>
+					<td>{% trans "Country of origin" %}</td>
+					<td>{{ product.country_of_origin }}</td>
+				</tr>
+				{% endif %}
+				{% if product.manufacturer %}
+				<tr>
+					<td>{% trans "Manufacturer" %}</td>
+					<td>{{ product.manufacturer }}</td>
+				</tr>
+				{% endif %}
+				{% if product.color %}
+				<tr>
+					<td>{% trans "Color" %}</td>
+					<td>{{ product.color }}</td>
+				</tr>
+				{% endif %}
+				{% if product.color %}
+				<tr>
+					<td>{% trans "Season" %}</td>
+					<td>{{ product.get_season_display }}</td>
+				</tr>
+				{% endif %}
+				{% if product.fabric %}
+				<tr>
+					<td>{% trans "Fabric" %}</td>
+					<td>{{ product.fabric }}</td>
+				</tr>
+				{% endif %}
+				{% if product.composition %}
+				<tr>
+					<td>{% trans "Composition" %}</td>
+					<td>{{ product.composition }}</td>
+				</tr>
+				{% endif %}
+				{% if product.decoration %}
+				<tr>
+					<td>{% trans "Decoration" %}</td>
+					<td>{{ product.decoration }}</td>
+				</tr>
+				{% endif %}
+				{% if product.condition %}
+				<tr>
+					<td>{% trans "Condition" %}</td>
+					<td>{{ product.get_condition_display }}</td>
+				</tr>
+				{% endif %}
 				</tbody>
 			</table>
 		</div>
+
 		</div>
-		<div class="col-xs-12 col-md-12">
+		<div class="col-xs-12 col-md-12" style="margin-top: 2%; padding-top: 2%; background-color: #fff;  border-radius: 4px" >
 			{{ product.description|safe }}
 		</div>
-	<div class="col-xs-12 col-md-8">
-		<!-- include "Add to Cart" dialog box -->
-		{% include "myshop/catalog/clothes-add2cart.html" %}
-	</div>
 	</div>
 </div>
 
