--- a/bombay/myshop/templates/myshop/catalog/commodity-detail.html
+++ b/bombay/myshop/templates/myshop/catalog/commodity-detail.html
@@ -10,47 +10,41 @@
 
 {% block main-content %}
 <div class="container">
-	<div class="row product-detail" style="margin-bottom: 7%; margin-top: 7%; margin-right: 3%; margin-left: 3%">
+	<div class="row product-detail">
 		<div class="col-xs-12 col-md-12">
 			<div class="col-xs-8 col-md-8">
 				<h1>{% render_model product "product_name" %}</h1>
 			</div>
 			<div class="col-xs-4 col-md-4">
-				{% ifequal product.discount '- 0 %' %}
-				<div class="promoBox">
-					<h4 style="color: #4f85bb">{{ product.get_availability_display }}</h4>
-					<h3 style="color: black;">{{ product.unit_price }}</h3>
-				</div>
-				{% else %}
 				<div class="promoBox">
 					<aside><h3>{{ product.discount }}</h3></aside>
 					<h4 style="color: #4f85bb">{{ product.get_availability_display }}</h4>
 					<h3 style="color: red;">{{ product.unit_price }}</h3>
 					<p><del>{{ product.price_without_discount }}</del></p>
 				</div>
-				{% endifequal %}
 			</div>
 			</div>
-			<div class="row">
-			<div class="col-xs-6 col-md-2 thumbnails" style="margin-right: 2%; margin-bottom: 2%;">
+		<div class="col-xs-2 col-md-1 thumbnails" >
 				{% for img in product.images.all %}
-				{% thumbnail img 150x150 as thumb %}
+				{% thumbnail img 150x120 as thumb %}
 				<a href="{{ img.url }}" data-standard="{{ img.url }}">
-					<img style="margin-right: 2%; margin-bottom: 3%;" src="{{ thumb.url }}" width="{{ thumb.width }}"
-						 height="{{ thumb.height }}" alt="{{ product.product_name }}">
+					<img style="margin-bottom: 10%;" src="{{ thumb.url }}" width="auto"
+						 height="{{ thumb.height }}" alt="{{ product.product_name }}" style="margin-bottom: 2%;">
 				</a>
 				{% endfor %}
 			</div>
-			<div class="images col-xs-12 col-md-6">
-				<div class="easyzoom easyzoom--overlay easyzoom--with-thumbnails is-ready">
+		<div class="images col-xs-12 col-md-6">
+				<div class="easyzoom easyzoom--overlay easyzoom--with-thumbnails is-ready pull-right">
 					<a href="{{ product.images.all.0.url }}">
-						<img src="{{ product.images.all.0.url }}" style="max-height: 35em;"
+						<img src="{{ product.images.all.0.url }}" style="max-height: 46em; max-width: 36em;"
 							 alt="{{ product.product_name }}">
 					</a>
 				</div>
 			</div>
-				<div class="col-xs-12 col-md-3">
-					<table class="table" >
+		<div class="col-md-5">
+			{% include "myshop/catalog/commodity-add2cart.html" %}
+
+			<table class="table" style="background-color: #fff;">
 				<tbody style="border: none;">
 					<tr>
 						<td>{% trans "Category" %}</td>
@@ -100,17 +94,14 @@
 					{% endif %}
 				</tbody>
 			</table>
-				</div>
-			</div>
 		</div>
-		<div class="col-xs-12 col-md-12 col-lg-12">
+
+		</div>
+		<div class="col-xs-12 col-md-12" style="margin-top: 2%; padding-top: 2%; background-color: #fff;  border-radius: 4px" >
 			{{ product.description|safe }}
-		</div>
-		<div class="col-xs-12 col-md-8 col-lg-6" style="margin-top: 2em;">
-			<!-- include "Add to Cart" dialog box -->
-			{% include "myshop/catalog/commodity-add2cart.html" %}
 		</div>
 	</div>
 </div>
 
 {% endblock main-content %}
+
