--- a/bombay/myshop/templates/myshop/pages/base.html
+++ b/bombay/myshop/templates/myshop/pages/base.html
@@ -2,6 +2,15 @@
 <!DOCTYPE html>
 <html lang="{{ LANGUAGE_CODE }}" ng-app="myShop">
 <head>
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-136065076-1"></script>
+	<script>
+	  window.dataLayer = window.dataLayer || [];
+	  function gtag(){dataLayer.push(arguments);}
+	  gtag('js', new Date());
+
+	  gtag('config', 'UA-136065076-1');
+	</script>
 	<title>{% block title %}Bombay Shop{% endblock %}</title>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
