--- a/bombay/myshop/templates/myshop/catalog/clothes-add2cart.html
+++ b/bombay/myshop/templates/myshop/catalog/clothes-add2cart.html
@@ -13,7 +13,7 @@
 	<tbody>
 		<tr>
 			<td>
-				<select class="form-control" ng-model="context.product_size" ng-change="updateContext()" >
+				<select class="form-control" ng-model="context.product_size" ng-change="updateContext()" style="width: 5em;">
 	{% for product_variant in product.variants.all %}
 					<option value="{{ product_variant.product_size }}">
 						{{ product_variant.product_size }}
