--- a/bombay/myshop/templates/myshop/catalog/clothes-detail.html
+++ b/bombay/myshop/templates/myshop/catalog/clothes-detail.html
@@ -16,12 +16,25 @@
 				<h1>{% render_model product "product_name" %}</h1>
 			</div>
 			<div class="col-xs-4 col-md-4">
+				{% if product.unit_price != product.price_without_discount %}
 				<div class="promoBox">
 					<aside><h3>{{ product.discount }}</h3></aside>
 					<h4 style="color: #4f85bb">{{ product.get_availability_display }}</h4>
+					{% if product.promo_option %}
+					<h4 style="color: #4f85bb">{{ product.get_promo_option_display }}</h4>
+					{% endif %}
 					<h3 style="color: red;">{{ product.unit_price }}</h3>
 					<p><del>{{ product.price_without_discount }}</del></p>
 				</div>
+				{% else %}
+				<div class="promoBox">
+					<h4 style="color: #4f85bb">{{ product.get_availability_display }}</h4>
+					{% if product.promo_option %}
+					<h4 style="color: #4f85bb">{{ product.get_promo_option_display }}</h4>
+					{% endif %}
+					<h3 style="color: #4f85bb;">{{ product.unit_price }}</h3>
+				</div>
+				{% endif %}
 			</div>
 			</div>
 		<div class="col-xs-2 col-md-1 thumbnails" >
@@ -94,12 +107,6 @@
 				<tr>
 					<td>{% trans "Decoration" %}</td>
 					<td>{{ product.decoration }}</td>
-				</tr>
-				{% endif %}
-				{% if product.condition %}
-				<tr>
-					<td>{% trans "Condition" %}</td>
-					<td>{{ product.get_condition_display }}</td>
 				</tr>
 				{% endif %}
 				</tbody>
